[package]
name = "rustypipe"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = {version="0.6.18" }
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
tokio = { version = "1.28.2", features = ["full"] }
tokio-postgres = {version = "0.7.8", features = ["with-serde_json-1"]}
# tokio-postgres-jsonb = "0.2.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = {version="1.0.163", features=["derive"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
indexmap = { version = "1.9.3", features = ["serde-1"] }
